    relying on the keyring being small here, although we should really have
    a keyring udeb instead.
  * Build-depend on gnupg; apt requires it to verify signatures.
  * Add udev pkg-lists files (including both udev and hotplug); not used by
    default yet.
  * Add real alternatives for virtual glibc-pic build-dependency.

  [ Frans Pop ]
  * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
    about missing lists.
  * Add build dependencies needed to build PDF/TXT versions of the manual.
  * Make main build script for the manual fail on errors.
  * Introduce cascading stylesheet for the HTML version of the manual.
  * Modify build depends to allow openjade1.3 as well as openjade.
  * Add appendix on installing over plip, contributed by Sylvain Ferriol;
    edited by Frans Pop.
  * Document network-console in manual.
  * Switch sparc to 2.6.12 kernel, dropping 2.6 support for sparc32 as there
    is no 2.6.12. kernel available.
  * Update silo configurations to properly support install, expert and rescue.
  * Enable building both 2.4 and 2.6 images for sparc CDs.
  * Split preseeding example in manual into seperate files for Sarge and Etch;
    the differences were getting too great for a single file.

  [ Martin Michlmayr ]
  * Add support for rescue mode to mipsel/cobalt.
  * Rename the default target of {mips,mipsel}/sb1-swarm-bn from
    'installer' to 'install' in compliance with other arches.
  * Add support for rescue mode to {mips,mipsel}/sb1-swarm-bn.

  [ Stephen R. Marenka ]
  * m68k tools rework.
  * incorporate boot/m68k/amiga scripts in tools.
  * initial support for future penguin and amiboot packages.
  * drop 2.2 kernel support for everything but macs.

  [ Eddy Petrisor ]
  * Removed ASCII characters from needed-characters/vi

  [ David Nusinow ]
  * Add attribution to Karsten M. Self for chroot-install section of the
    manual. Closes: #316487

  [ Joey Hess ]
  * Switch i386 to 2.6.11 kernel.