@@ -165,6 +165,8 @@ debian-installer (20050630) UNRELEASED; urgency=low
   * Add udev pkg-lists files (including both udev and hotplug); not used by
     default yet.
   * Add real alternatives for virtual glibc-pic build-dependency.
+  * Remove powerpc-builtin-initrd.sh and corresponding bzip2
+    build-dependency on powerpc; we use mkvmlinuz everywhere now.
 
   [ Frans Pop ]
   * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
